# YAPlayer

./: .gitmodules  CMakeLists.txt  README.md  doxygen
src/controls/: abstractcanvas.cpp  abstractcanvas.h  custompushbutton.cpp  custompushbutton.h  imagecanvas.cpp  imagecanvas.h  msgbox.cpp  msgbox.h  nofocusdelegate.cpp  nofocusdelegate.h  shadowwindow.cpp  shadowwindow.h  videocanvas.cpp  videocanvas.h
src/forms/: imagecanvastool.ui  placeholder.ui  videocanvastool.ui  yaplayer.ui
src/main/: insta360studio.cpp  insta360studio.h  main.cpp
src/render/: panoramaviewer.h  projectionbase.cpp  projectionbase.h  sphericalprojection.cpp  sphericalprojection.h  windowrenderer.cpp  windowrenderer.h
src/resources/: YAPlayer.qrc  style.qss
